--- a/compute-version/action.yml
+++ b/compute-version/action.yml
@@ -23,12 +23,9 @@ outputs:
   version_tag:
     description: The computed version tag
     value: ${{ steps.semantic-version.outputs.version_tag }}
-  hasChanges:
-    description: Whether there is a next version
-    value: ${{ steps.semantic-version.outputs.changed }}
-  bumpReleaseVersion:
-    description: Whether to bump the release version
-    value: ${{ steps.check_release.outputs.release }}
+  needs_bump:
+    description: Whether to bump the version
+    value: ${{ steps.check_bump.outputs.needs_bump }}
   suffix:
     description: The computed suffix
     value: ${{ steps.set_suffix.outputs.suffix }}
@@ -54,8 +51,20 @@ runs:
 
     - name: Set suffix
       id: set_suffix
-      if: ${{ github.event_name == 'pull_request' }}
+      if: ${{ github.event_name == 'pull_request' && steps.semantic-version.outputs.changed == 'true' }}
       run: echo "suffix=-pr.${{ github.event.pull_request.number }}.${{ github.run_number }}" >> $GITHUB_OUTPUT
+      shell: bash
+
+    - name: Check if bump is needed
+      id: check_bump_version
+      run: |
+        if [[ "${{ steps.set_suffix.outputs.suffix }}" ]] || [[ "${{ steps.semantic-version.outputs.version }}" != "${{ steps.semantic-version.outputs.previous_version }}" ]]; then
+          echo "needs_bump=true" >> $GITHUB_OUTPUT
+          echo "Bumping version is required: version change or PR build detected"
+        else
+          echo "needs_bump=false" >> $GITHUB_OUTPUT
+          echo "Bumping version not needed: same version and not a PR build"
+        fi
       shell: bash
 
     - name: Outputs
@@ -63,27 +72,8 @@ runs:
         echo "Previous Version: ${{ steps.semantic-version.outputs.previous_version }}"
         echo "Version: ${{ steps.semantic-version.outputs.version }}"
         echo "Version Tag: ${{ steps.semantic-version.outputs.version_tag }}"
-        echo "Changed: ${{ steps.semantic-version.outputs.changed }}"
+        echo "Suffix: ${{ steps.set_suffix.outputs.suffix }}"
+        echo "Needs Bump: ${{ steps.check_bump_version.outputs.needs_bump }}"
         echo "Increment: ${{ steps.semantic-version.outputs.increment }}"
         echo "Is Tagged: ${{ steps.semantic-version.outputs.is_tagged }}"
-      shell: bash
-    - name: Check if release
-      id: check_release
-      run: |
-        # Get the current branch name
-        CURRENT_BRANCH=$(git branch --show-current)
-        # Get the default branch name if main_branch input is not provided
-        if [[ -z "${{ inputs.main_branch }}" ]]; then
-          DEFAULT_BRANCH=$(git remote show origin | grep 'HEAD branch' | cut -d':' -f2 | xargs)
-          MAIN_BRANCH="$DEFAULT_BRANCH"
-        else
-          MAIN_BRANCH="${{ inputs.main_branch }}"
-        fi
-
-        # Check if we're on main/default branch and if versions are different
-        if [[ "$CURRENT_BRANCH" == "$MAIN_BRANCH" && "${{ steps.semantic-version.outputs.previous_version }}" != "${{ steps.semantic-version.outputs.version }}" ]]; then
-          echo "release=true" >> $GITHUB_OUTPUT
-        else
-          echo "release=false" >> $GITHUB_OUTPUT
-        fi
       shell: bash
